# MajordomoPattern0_1

./: CMakeLists.txt  README.md  broker.c  clientAsynchronous.c  clientJSON.c  clientJSONasynchronous.c  clientJSONsynchronous.c  clientMSGPACK.c  clientSynchronous.c  workerCoffee.c  workerJSON.c  workerJSONthreads.c  workerJSONthreads_2.c
Queue/: queue.c  queue.h
include/: broker_mdp_extended.h  client_task_asynchronous.h  coffeeType.h  mdp_common.h  queue.h  workerTask.h
